tests/pass/run/imported_instance_method_parity/support.kira
class Application {
    let value: I64 = 7

    function run(): I64 {
        return self.value
    }
}
