tests/fail/semantics/any_requires_construct_class/main.kira
class Plain {
}

function acceptPlain(value: any Plain) {
    return;
}
